--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -7,9 +7,12 @@
 ACKNOWLEDGEMENTS
 \end{center}
 
-I would like to acknowledge the generous support I received from my family. You can acknowledge anyone
-you like.  Sometimes, it is nice to thank your mom.
+I would like to express my sincere gratitude to my advisor, Dr. Chulwoo Pack, for his invaluable guidance, support, and encouragement throughout my doctoral journey. His expertise in computer vision and machine learning has been instrumental in shaping this research.
 
-It is also kind to thank your advisor and committee members.
+I am grateful to the faculty and staff of the Department of Electrical Engineering and Computer Science at South Dakota State University for providing an excellent research environment and resources that made this work possible.
+
+I would also like to thank my family for their unwavering support and encouragement throughout my academic pursuits. Their belief in my abilities has been a constant source of motivation.
+
+Finally, I acknowledge the contributions of the research community whose prior work in video understanding and evaluation metrics provided the foundation for this dissertation.
 
 \end{document}
