--- a/main.tex
+++ b/main.tex
@@ -124,6 +124,25 @@
 \makenomenclature
 \renewcommand{\nomname}{ABBREVIATIONS}%
 
+% Add abbreviations
+\nomenclature{VCS}{Video Comprehension Score}
+\nomenclature{GAS}{Global Alignment Score}
+\nomenclature{LAS}{Local Alignment Score}
+\nomenclature{NAS}{Narrative Alignment Score}
+\nomenclature{LNT}{Local Narrative Tolerance}
+\nomenclature{MW}{Mapping Windows}
+\nomenclature{SAS}{Semantic Alignment Score}
+\nomenclature{SaT}{Segment any Text}
+\nomenclature{MPII}{Max Planck Institute for Informatics}
+\nomenclature{LVLM}{Large Video Language Model}
+\nomenclature{LLM}{Large Language Model}
+\nomenclature{BLEU}{Bilingual Evaluation Understudy}
+\nomenclature{ROUGE}{Recall-Oriented Understudy for Gisting Evaluation}
+\nomenclature{METEOR}{Metric for Evaluation of Translation with Explicit ORdering}
+\nomenclature{CIDEr}{Consensus-based Image Description Evaluation}
+\nomenclature{BERT}{Bidirectional Encoder Representations from Transformers}
+\nomenclature{CLIP}{Contrastive Language-Image Pre-training}
+
 %% Used for Positioning on the title page
 \usepackage[absolute]{textpos}
     \setlength{\TPHorizModule}{1in} % sets our horizontal unit of measuring
@@ -190,11 +209,11 @@
 %% ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 %% ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 %% AUTHOR MUST MODIFY
-\def\yourtitle{SOUTH DAKOTA STATE UNIVERSITY PHD TEMPLATE}
-\def\yourname{YOUR NAME}
-\def\yourmajor{Your Major}
-\def\youradvisor{Your Advisor, Ph.D.}
-\def\departmenthead{Department Head, Ph.D.}
+\def\yourtitle{Video Comprehension Score (VCS): A Metric for Long-Form Video Description Evaluation}
+\def\yourname{Harsh Dubey}
+\def\yourmajor{Computer Science}
+\def\youradvisor{Chulwoo Pack, Ph.D.}
+\def\departmenthead{Sungyong Jung, Ph.D.}
 %% ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 %% ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
