--- a/signature.tex
+++ b/signature.tex
@@ -24,11 +24,12 @@ Dissertation Advisor \hspace{2.43in}Date
 
 \underline{\hspace{4.2in}}\\
 \departmenthead\\
-Head, Department of Mathematics and Statistics \hspace{0.6in}Date
+Head, Department of Electrical Engineering and Computer Science \hspace{0.1in}Date
 
 \vspace{.5in}
 
 \underline{\hspace{4.2in}}\\
+Nicole Lounsbery, Ph.D.\\
 Dean, Graduate School \hspace{2.27in}Date
 
 \end{textblock}
