--- a/main.tex
+++ b/main.tex
@@ -268,15 +268,8 @@
 %% set the depth of the Table of Contents
 \setcounter{tocdepth}{2}
 
-%% The rest of the paper, use as many as you need
+%% The main content chapter
 \subfile{section1}
-\subfile{section2}
-\subfile{section3}
-
-%% To add more sections
-%% just add another file named section4.tex
-%% and uncomment the next line
-%\subfile{section4}
 
 %% appendices
 \subfile{appendices}
