--- a/appendices.tex
+++ b/appendices.tex
@@ -11,39 +11,41 @@ APPENDIX\\
 \end{center}
 \addcontentsline{toc}{section}{APPENDIX}
 
-\section{EXTRA MATERIAL}
-\label{app:extra}
+\section{IMPLEMENTATION DETAILS}
+\label{app:implementation}
 
-    This appendix can contain various supplemental materials.  You can fill the appendix with lots
-    of extra stuff that does not fit in the regular sections. 
+This appendix contains supplemental materials and implementation details for the Video Comprehension Score (VCS) methodology.
 
-%% set appendix to single space for the source code
-\linespread{1.0}
+\subsection{ALGORITHM SPECIFICATIONS}
 
-%% options for lists
-\lstset{ %
-  basicstyle=\small,        % the size of the fonts that are used for the code
-  breakatwhitespace=false,         % sets if automatic breaks should only happen at whitespace
-  breaklines=true,                 % sets automatic line breaking
-  commentstyle=\color{ForestGreen},    % comment style
-  frame=single,                    % adds a frame around the code
-  keepspaces=true,                 % keeps spaces in text, useful for keeping indentation of code (possibly needs columns=flexible)
-  keywordstyle=\color{blue},       % keyword style
-  numbers=left,                    % where to put the line-numbers; possible values are (none, left, right)
-  numbersep=5pt,                   % how far the line-numbers are from the code
-  numberstyle=\tiny\color{gray}, % the style that is used for the line-numbers
-  rulecolor=\color{black},         % if not set, the frame-color may be changed on line-breaks within not-black text (e.g. comments (green here))
-  showspaces=false,                % show spaces everywhere adding particular underscores; it overrides 'showstringspaces'
-  showstringspaces=false,          % underline spaces within strings only
-  showtabs=false,                  % show tabs within strings adding particular underscores
-  stepnumber=1,                    % the step between two line-numbers. If it's 1, each line will be numbered
-  tabsize=4,                       % sets default tabsize to 4 spaces
-}
+The complete VCS algorithm implementation involves several key components that work together to provide comprehensive video description evaluation:
 
-\subsection{SQL CODE - DATA TABLES}
-    \lstinputlisting[language=SQL, label=src:SQL]{source/tables.sql}
+\subsubsection{Best Matching Algorithm Details}
+The Best Matching Algorithm resolves semantic collision and ambiguity issues through adaptive context filtering combined with mapping-window constraints. The algorithm parameters include context cutoff $\tau_{ctx} = 0.6$ and context window control $k_{ctx} = 4$ by default.
 
-\subsection{R CODE - ANALYSIS }
-    \lstinputlisting[language=R, label=src:R]{source/code.R}
+\subsubsection{Local Narrative Tolerance Implementation}
+The Local Narrative Tolerance (LNT) parameter allows for configurable chronological strictness. Higher LNT values provide greater tolerance for narrative reordering and descriptive variability, accommodating the natural flexibility found in video narratives.
+
+\subsection{EXPERIMENTAL PARAMETERS}
+
+\subsubsection{VCS Configuration}
+\begin{itemize}
+\item Text embedding model: NV-Embed-v2
+\item Chunk size: $k = 3$ segments
+\item Local Narrative Tolerance: $\tau_{LNT} = 0.1$
+\item Context cutoff: $\tau_{ctx} = 0.6$
+\item Context window control: $k_{ctx} = 4$
+\end{itemize}
+
+\subsubsection{Baseline Metrics Configuration}
+\begin{itemize}
+\item BERTScore: RoBERTa-base backbone with F1-measure
+\item SBERT: all-MiniLM-L6-v2 model for sentence embeddings
+\item Traditional metrics: BLEU, ROUGE-L, METEOR, CIDEr with standard parameters
+\end{itemize}
+
+\subsection{DATASET CONSTRUCTION DETAILS}
+
+The synthetic datasets were constructed from 1,390 consecutive scene groups from the MPII Movie Description Dataset, with each scene group containing approximately 500 words. The corruption detection test set includes 10 valid variations and 10 invalid corruptions per base description, producing 27,800 test instances total.
     
 \end{document}
