--- a/references.bib
+++ b/references.bib
@@ -46,3 +46,224 @@
     volume = {31},
     year = {2013}
 }
+
+% Video Language Models
+@misc{Yuan2025Tarsier2,
+  author       = "Liping Yuan and Jiawei Wang and Haomiao Sun and Yuchen Zhang and Yuan Lin",
+  title        = "{Tarsier2: Advancing Large Vision-Language Models from Detailed Video Description to Comprehensive Video Understanding}",
+  year         = 2025,
+  eprint       = "2501.07888",
+  archivePrefix= "arXiv",
+  primaryClass = "cs.CV"
+}
+
+@inproceedings{Shen2025LongVU,
+  author    = "Xiaoqian Shen and Yunyang Xiong and Changsheng Zhao and Lemeng Wu and Jun Chen and Chenchen Zhu and Zechun Liu and Fanyi Xiao and Balakrishnan Varadarajan and Florian Bordes and Zhuang Liu and Hu Xu and Hyunwoo J. Kim and Bilge Soran and Raghuraman Krishnamoorthi and Mohamed Elhoseiny and Vikas Chandra",
+  title     = "{LongVU: Spatiotemporal Adaptive Compression for Long Video-Language Understanding}",
+  year      = 2025,
+  booktitle = "Proceedings of the 42nd International Conference on Machine Learning {(ICML-25)}",
+  address   = "Vancouver, Canada",
+  publisher = "PMLR"
+}
+
+@inproceedings{Chen2025LongVILA,
+  author    = "Yukang Chen and Fuzhao Xue and Dacheng Li and Qinghao Hu and Ligeng Zhu and Xiuyu Li and Yunhao Fang and Haotian Tang and Shang Yang and Zhijian Liu and Yihui He and Hongxu Yin and Pavlo Molchanov and Jan Kautz and Linxi Fan and Yuke Zhu and Yao Lu and Song Han",
+  title     = "{LongVILA: Scaling Long-Context Visual Language Models for Long Videos}",
+  year      = 2025,
+  booktitle = "Proceedings of the Thirteenth International Conference on Learning Representations {(ICLR-2025)}",
+  address   = "Singapore",
+  publisher = "ICLR"
+}
+
+@inproceedings{Ataallah2024Goldfish,
+  author    = "Kirolos Ataallah and Xiaoqian Shen and Eslam Abdelrahman and Essam Sleiman and Mingchen Zhuge and Jian Ding and Deyao Zhu and J{\"u}rgen Schmidhuber and Mohamed Elhoseiny",
+  title     = "{Goldfish: Vision-Language Understanding of Arbitrarily Long Videos}",
+  year      = 2024,
+  booktitle = "Proceedings of the European Conference on Computer Vision (ECCV 2024)",
+  pages     = "251-267",
+  address   = "Cham, Switzerland",
+  publisher = "Springer"
+}
+
+% Video Understanding Benchmarks
+@InProceedings{chen:acl11,
+  title     = {Collecting Highly Parallel Data for Paraphrase Evaluation},
+  author    = {Chen, David L. and Dolan, William B.},
+  booktitle = {Proceedings of the 49th Annual Meeting of the Association for Computational Linguistics (ACL 2011)},
+  address   = {Portland, OR},
+  month     = {June},
+  year      = {2011}
+}
+
+@inproceedings{ZhXuCoAAAI18,
+    author={Zhou, Luowei and Xu, Chenliang and Corso, Jason J},
+    title = {Towards Automatic Learning of Procedures From Web Instructional Videos},
+    booktitle = {AAAI Conference on Artificial Intelligence},
+    pages={7590--7598},
+    year = {2018},
+    url = {https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/17344}
+}
+
+@inproceedings{wu2024longvideobench,
+  author = {Haoning Wu and Dongxu Li and Bei Chen and Junnan Li},
+  year = 2024,
+  title = "{LongVideoBench: A Benchmark for Long-context Interleaved Video-Language Understanding}",
+  booktitle = "Advances in Neural Information Processing Systems 37 (NeurIPS-2024), Datasets and Benchmarks Track",
+  address = "San Diego, CA",
+  publisher = "Curran Associates"
+}
+
+@inproceedings{ataallah2024infinibench,
+  author = {Kirolos Ataallah and Chenhui Gou and Eslam Abdelrahman and Khushbu Pahwa and Jian Ding and Mohamed Elhoseiny},
+  year = 2025,
+  title = "{InfiniBench: A Comprehensive Benchmark for Large Multimodal Models in Very Long Video Understanding}",
+  booktitle = "Proceedings of the Thirteenth International Conference on Learning Representations (ICLR-2025)",
+  address = "Singapore"
+}
+
+@inproceedings{nagrani2025neptune,
+  author = {Arsha Nagrani and Mingda Zhang and Ramin Mehran and Rachel Hornung and Nitesh Bharadwaj Gundavarapu and Nilpa Jha and Austin Myers and Xingyi Zhou and Boqing Gong and Cordelia Schmid and Mikhail Sirotenko and Yukun Zhu and Tobias Weyand},
+  year = 2025,
+  title = "{Neptune: The Long Orbit to Benchmarking Long Video Understanding}",
+  booktitle = "Proceedings of the Thirteenth International Conference on Learning Representations (ICLR-2025)",
+  address = "Singapore"
+}
+
+@inproceedings{rohrbach2015dataset,
+  author = {Rohrbach, Anna and Rohrbach, Marcus and Tandon, Niket and Schiele, Bernt},
+  year = {2015},
+  title = "{A Dataset for Movie Description}",
+  booktitle = "{Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)}",
+  publisher = "{IEEE Computer Society}"
+}
+
+@inproceedings{frohmann-etal-2024-segment,
+  title = "Segment Any Text: A Universal Approach for Robust, Efficient and Adaptable Sentence Segmentation",
+  author = "Frohmann, Markus and Sterner, Igor and Vuli{\'c}, Ivan and Minixhofer, Benjamin and Schedl, Markus",
+  editor = "Al-Onaizan, Yaser and Bansal, Mohit and Chen, Yun-Nung",
+  booktitle = "Proceedings of the 2024 Conference on Empirical Methods in Natural Language Processing",
+  month = "November",
+  year = "2024",
+  address = "Miami, Florida, USA",
+  publisher = "Association for Computational Linguistics",
+  url = "https://aclanthology.org/2024.emnlp-main.665",
+  pages = "11908--11941"
+}
+
+% Traditional Evaluation Metrics
+@inproceedings{p:02,
+  author = "Papineni, Kishore and Roukos, Salim and Ward, Todd and Zhu, Wei-Jing",
+  year = 2002,
+  title = "{BLEU: a Method for Automatic Evaluation of Machine Translation}",
+  booktitle = "Proceedings of the 40th Annual Meeting of the Association for Computational Linguistics",
+  pages = "311--318",
+  address = "Philadelphia, Pa.",
+  publisher = "Association for Computational Linguistics"
+}
+
+@inproceedings{l:04,
+  author = "Lin, Chin-Yew",
+  year = 2004,
+  title = "{ROUGE: A Package for Automatic Evaluation of Summaries}",
+  booktitle = "Text Summarization Branches Out: Proceedings of the ACL-04 Workshop",
+  pages = "74--81",
+  address = "Barcelona, Spain",
+  publisher = "Association for Computational Linguistics"
+}
+
+@inproceedings{bl:05,
+  author = "Banerjee, Satanjeev and Lavie, Alon",
+  year = 2005,
+  title = "{METEOR: An Automatic Metric for MT Evaluation with Improved Correlation with Human Judgments}",
+  booktitle = "Proceedings of the ACL Workshop on Intrinsic and Extrinsic Evaluation Measures for Machine Translation and/or Summarization",
+  pages = "65--72",
+  address = "Ann Arbor, Mich.",
+  publisher = "Association for Computational Linguistics"
+}
+
+@inproceedings{v:15,
+  author = "Vedantam, Ramakrishna and Zitnick, C. Lawrence and Parikh, Devi",
+  year = 2015,
+  title = "{CIDEr: Consensus-Based Image Description Evaluation}",
+  booktitle = "Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR 2015)",
+  pages = "4566--4575",
+  address = "Washington, D.C.",
+  publisher = "IEEE Computer Society"
+}
+
+@inproceedings{afjg:16,
+  author = "Anderson, Peter and Fernando, Basura and Johnson, Mark and Gould, Stephen",
+  year = 2016,
+  title = "{SPICE: Semantic Propositional Image Caption Evaluation}",
+  booktitle = "Proceedings of the 14th European Conference on Computer Vision (ECCV 2016)",
+  pages = "382--398",
+  address = "Cham, Switzerland",
+  publisher = "Springer"
+}
+
+% Embedding-Based Metrics
+@inproceedings{z:20,
+  author = "Zhang, Tianyi and Kishore, Varsha and Wu, Felix and Weinberger, Kilian Q. and Artzi, Yoav",
+  year = 2020,
+  title = "{BERTScore: Evaluating Text Generation with BERT}",
+  booktitle = "Proceedings of the Eighth International Conference on Learning Representations (ICLR 2020)",
+  address = "Addis Ababa, Ethiopia",
+  publisher = "OpenReview.net"
+}
+
+@inproceedings{r:19,
+  author = "Reimers, Nils and Gurevych, Iryna",
+  year = 2019,
+  title = "{Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks}",
+  booktitle = "Proceedings of the 2019 Conference on Empirical Methods in Natural Language Processing and the 9th International Joint Conference on Natural Language Processing (EMNLP-IJCNLP)",
+  pages = "3982--3992",
+  address = "Hong Kong, China",
+  publisher = "Association for Computational Linguistics"
+}
+
+@misc{l:24,
+  author = "Lee, Chankyu and Roy, Rajarshi and Xu, Mengyao and Raiman, Jonathan and Shoeybi, Mohammad and Catanzaro, Bryan and Ping, Wei",
+  year = 2024,
+  title = "{NV-Embed: Improved Techniques for Training LLMs as Generalist Embedding Models}",
+  eprint = "2405.17428",
+  archivePrefix= "arXiv",
+  primaryClass = "cs.CL"
+}
+
+% Multimodal Evaluation Metrics
+@inproceedings{syxl:22,
+  author = "Shi, Yaya and Yang, Xu and Xu, Haiyang and Yuan, Chunfeng and Li, Bing and Hu, Weiming and Zha, Zheng-Jun",
+  year = 2022,
+  title = "{EMScore: Evaluating Video Captioning via Coarse-Grained and Fine-Grained Embedding Matching}",
+  booktitle = "Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR 2022)",
+  pages = "17929--17938",
+  address = "Los Alamitos, Calif.",
+  publisher = "IEEE Computer Society"
+}
+
+@inproceedings{Radford2021LearningTV,
+  title={Learning Transferable Visual Models From Natural Language Supervision},
+  author={Alec Radford and Jong Wook Kim and Chris Hallacy and A. Ramesh and Gabriel Goh and Sandhini Agarwal and Girish Sastry and Amanda Askell and Pamela Mishkin and Jack Clark and Gretchen Krueger and Ilya Sutskever},
+  booktitle={ICML},
+  year={2021}
+}
+
+% LLM-Based Metrics
+@inproceedings{chan:23,
+  author    = "Chan, David M. and Petryk, Suzanne and Gonzalez, Joseph E. and Darrell, Trevor and Canny, John",
+  year      = 2023,
+  title     = "{CLAIR: Evaluating Image Captions with Large Language Models}",
+  booktitle = "Proceedings of the 2023 Conference on Empirical Methods in Natural Language Processing ({EMNLP}‑2023)",
+  pages     = "13638--13646",
+  address   = "Singapore",
+  publisher = "Association for Computational Linguistics"
+}
+
+@misc{wyzs:24,
+  author = "Wang, Jiawei and Yuan, Liping and Zhang, Yuchen and Sun, Haomiao",
+  year = 2024,
+  title = "{Tarsier: Recipes for Training and Evaluating Large Video Description Models}",
+  eprint = "2407.00634",
+  archivePrefix= "arXiv",
+  primaryClass = "cs.CV"
+}
