--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 \documentclass[12pt,letterpaper,oneside]{article}
-\usepackage[latin1]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
