--- a/main.tex
+++ b/main.tex
@@ -117,6 +117,7 @@
 \usepackage{booktabs}
 % for clever references
 \usepackage{cleveref}
+\usepackage{adjustbox}
 \usepackage[ampersand]{easylist}
 
 %For the abbreviations page
